--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,9 +4,9 @@ repo: upptime # The name of this repository
 
 sites:
   - name: AtomicAssets (AtomicHub)
-    url: https://wax.api.atomicassets.io
+    url: https://wax.api.atomicassets.io/assets/1099548897666
   - name: Balances API (EOS Amsterdam)
-    url: https://lightapi.eosamsterdam.net/api/balances/wax
+    url: https://lightapi.eosamsterdam.net/api/balances/wax/eosio.token
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
